Support other format data types in catalog